Fix spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,7 +72,7 @@ hr.none            { margin: 30px 0; border: none; }
 .header              { border-bottom: solid 1px #e1e1e8; margin-bottom: 20px; }
 .header:before       { display: table; content: " "; }
 .header:after        { display: table; content: " "; clear: both; }
-.header nav .logo    { display: block; padding: 20px 0; float: left; font-size: 22px; color: #000; }
+.header nav .logo    { display: block; padding: 20px 0 18px; float: left; font-size: 22px; color: #000; }
 .header nav ul       { margin-top: 15px; list-style: none; float: right; }
 .header nav ul li    { float: left; }
 .header nav ul li a  { display: block; padding: 10px 15px; margin: 0 10px; }
@@ -86,6 +86,6 @@ hr.none            { margin: 30px 0; border: none; }
 /* ---( form )------------------------------------------------------------------ */
 .form                { background: #fff; }
 .form label          { display: block; margin-top: 20px; font-size: 16px; }
-.form label input    { display: block; margin-top: 5px; width: 100%; border: solid 1px #e1e1e8; font-size: 16px; padding: 10px 20px; }
-.form label textarea { display: block; width: 100%; height: 8em; border: solid 1px #e1e1e8; font-size: 16px; padding: 10px 20px; }
+.form label input    { display: block; margin-top: 5px; width: 100%; border: solid 1px #e1e1e8; font-size: 16px; padding: 8px 10px; }
+.form label textarea { display: block; width: 100%; height: 8em; border: solid 1px #e1e1e8; font-size: 16px; padding: 8px 10px; }
 .form .button        { padding: 10px 20px; margin-top: 10px; color: #ffffff; border: none; }
